--- a/DaParser/ScriptingLanguage.csproj
+++ b/DaParser/ScriptingLanguage.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <OutputType>Library</OutputType>
+    <OutputType>Exe</OutputType>
     <TargetFramework>net471</TargetFramework>
     <Authors>Christopher Etmer</Authors>
     <Company />
