--- a/DaParser/ScriptingLanguage.csproj
+++ b/DaParser/ScriptingLanguage.csproj
@@ -5,7 +5,7 @@
     <TargetFramework>net471</TargetFramework>
     <Authors>Christopher Etmer</Authors>
     <Company />
-    <Version>0.1.0</Version>
+    <Version>1.0.0</Version>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
   </PropertyGroup>
@@ -13,6 +13,7 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
     <PlatformTarget>AnyCPU</PlatformTarget>
     <OutputPath>C:\Users\chris\Desktop\Packages\</OutputPath>
+    <WarningLevel>5</WarningLevel>
   </PropertyGroup>
 
 </Project>
